--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -8,47 +8,43 @@ body {
     margin: 0 auto;
 }
 
-form {
-    border: 3px solid #f1f1f1;
-    margin: 20px auto;
-    width: 15%;
-}
-
 .container {
-    padding: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
 }
 
-.container.label {
-    font-weight: bold;
+table {
+    border-collapse: collapse;
+    width: 50%;
 }
 
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: 1px solid #BEBEBE;
-    box-sizing: border-box;
-    outline: none;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-    box-shadow: 0 0 8px #88D5E9;
-    border: 1px solid #88D5E9;
-}
-
-button {
+th {
     background-color: #4caf50;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    outline: none;
 }
 
-@media screen and (max-width: 768px) {
-    form {
-        width: 80%;
-    }
+th, td {
+    text-align: center;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
 }
