--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,47 +9,66 @@ body {
     margin: 0 auto;
 }
 
-form {
-    border: 3px solid #f1f1f1;
-    margin: 20px auto;
-    width: 15%;
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    outline: none;
+}
+
+input[type=text]:focus {
+    box-shadow: 0 0 8px #88d5e9;
+    border: 1px solid #88d5e9;
+}
+
+button[type=submit] {
+    float: right;
+    cursor: pointer;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 20px;
+    margin-top: 20px;
 }
 
 .container {
-    padding: 16px;
+    margin: 20px auto;
+    width: 30%;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    padding: 20px;
 }
 
-.container.label {
-    font-weight: bold;
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 10px
 }
 
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: 1px solid #BEBEBE;
-    box-sizing: border-box;
-    outline: none;
+.col-75 {
+    float: right;
+    width: 75%;
+    margin-top: 10px;
 }
 
-input[type=text]:focus, input[type=password]:focus {
-    box-shadow: 0 0 8px #88D5E9;
-    border: 1px solid #88D5E9;
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    outline: none;
-}
-
-@media screen and (max-width: 768px) {
-    form {
-        width: 80%;
+@media screen and (max-width: 600px) {
+    .container,
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
     }
 }
