--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,27 +9,46 @@ body {
     margin: 0 auto;
 }
 
-form {
-    border: 3px solid #f1f1f1;
-    margin: 20px auto;
-    width: 15%;
-}
-
 .container {
-    padding: 16px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px;
 }
 
-.container.label {
-    font-weight: bold;
+.table-container {
+    width: 50%;
 }
 
-input[type=text], input[type=password] {
+.form-container {
+    width: 30%
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=text] {
     width: 100%;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: 1px solid #BEBEBE;
-    box-sizing: border-box;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
     outline: none;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -36,19 +56,98 @@ input[type=text]:focus, input[type=password]:focus {
     border: 1px solid #88D5E9;
 }
 
-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
+form {
+    background-color: #f2f2f2;
+    border-radius: 3px;
+    padding: 20px;
     width: 100%;
     outline: none;
 }
 
-@media screen and (max-width: 768px) {
-    form {
-        width: 80%;
+.col-25 {
+    width: 25%;
+    float: left;
+    margin-top: 6px;
+}
+
+.col-75 {
+    width: 75%;
+    float: right;
+    margin-top: 6px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.btn {
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-primary {
+    background-color: #4CAF50;
+    padding: 10px 32px;
+    margin: 4px 2px;
+    float: right;
+}
+
+.btn-danger {
+    background-color: #dc3545;
+    padding: 10px 32px;
+    margin: 4px 2px;
+    float: left;
+}
+
+.btn-edit {
+    background-color: #6c757d;
+    padding: 10px 32px;
+    margin: 4px 2px;
+    float: left;
+}
+
+table {
+    margin-top: 20px;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 10px;
+}
+
+th {
+    background-color: #007bff;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+@media screen and (max-width: 600px) {
+
+    .container {
+        width: 100%;
+        margin-top: 0;
+    }
+
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+
+    input[type=submit] {
+        margin-top: 6px;
     }
 }
